flux/apps/bracket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bracket
spec:
  selector:
    matchLabels:
      app: bracket
  template:
    metadata:
      labels:
        app: bracket
    spec:
      containers:
        - name: bracket
          image: ghcr.io/danielpower/bracket:main@sha256:9c7b940fef5228f16d114690c3ae275831e6579da628b419680907dbfc3a9f41
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
