flux/apps/bracket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bracket
spec:
  selector:
    app: bracket
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
