flux/apps/bracket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bracket
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bracket.danielpower.ca
      secretName: bracket-tls
  rules:
    - host: bracket.danielpower.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bracket
                port:
                  name: http
